[package]
name = "gpt_reg"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1.0.21"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
spider_fingerprint = "2.39.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "time"] }
zip = "2.4.2"
